src/test/ui/issues/issue-42312.stderr
error[E0277]: the size for values of type `<Self as std::ops::Deref>::Target` cannot be known at compilation time
  --> $DIR/issue-42312.rs:4:12
   |
LL |     fn baz(_: Self::Target) where Self: Deref {}
   |            ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `<Self as std::ops::Deref>::Target`
   = help: unsized locals are gated as an unstable feature
help: consider further restricting the associated type
   |
LL |     fn baz(_: Self::Target) where Self: Deref, <Self as std::ops::Deref>::Target: std::marker::Sized {}
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL |     fn baz(_: &Self::Target) where Self: Deref {}
   |               ^

error[E0277]: the size for values of type `(dyn std::string::ToString + 'static)` cannot be known at compilation time
  --> $DIR/issue-42312.rs:8:10
   |
LL | pub fn f(_: dyn ToString) {}
   |          ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `(dyn std::string::ToString + 'static)`
   = help: unsized locals are gated as an unstable feature
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL | pub fn f(_: &dyn ToString) {}
   |             ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
